--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,15 +1,37 @@
-.splide__slide {
-    padding: 2.5rem;
+.video-section {
+    // background-image: linear-gradient(
+    //     rgba($color-grey-light-1, 0.8), 
+    //     rgba($color-grey-light-1, 0.8)),
+    //     url('../img/random-2.png');
+    // background-size: 100%;
+    // background-repeat: repeat;
 
-    @include respond(br4) {
-        padding: 1rem;
+    background-image: url(../img/noise-grey-400.png);
+    background-repeat: repeat;
+
+    &__text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+
+        @include respond(br4) {
+            margin-top: 5rem;
+        }
+
+        & > * {
+            display: block;
+            max-width: 50rem;
+        }
     }
 }
 
-.splide-full .splide__slide {
-    padding: 0;
-
-    @include respond(br4) {
-        padding: 0;
-    }
+.features {
+    // background-image: linear-gradient(
+    //     rgba(#fff, 0.5), 
+    //     rgba(#fff, 0.5)),
+    //     url('../img/random.png');
+    // background-size: 40%;
+    // background-repeat: repeat;
 }
