--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,7 @@
 @import 'components/accordion';
 @import 'components/circuit';
 @import 'components/yt-item';
+@import 'components/yt-video';
 @import 'components/cookie';
 @import 'components/list';
 @import 'components/btn';
@@ -25,3 +26,6 @@
 
 @import 'pages/home';
 @import 'pages/cookie-policy';
+
+
+@import 'pages/template';
