--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -66,10 +66,6 @@
     line-height: 1.2;
     padding-bottom: 2rem;
 
-    &--grey-dark {
-        color: $color-grey-dark;
-    }
-
     @include respond(br2) {
         letter-spacing: .1rem;
         font-size: 2.8rem;
@@ -93,13 +89,38 @@
     letter-spacing: 1px;
     line-height: 1.2;
     padding-bottom: .5rem;
-
-    &--grey-dark {
-        color: $color-grey-dark;
-    }
 }
 
 .paragraph {
     font-size: 1.8rem;
     font-weight: 300;
+}
+
+
+/*
+** COLORS
+*/
+.heading-secondary,
+.heading-tertiary,
+.paragraph {
+
+    &--grey {
+        color: $color-grey;
+    }
+
+    &--grey-dark {
+        color: $color-grey-dark;
+    }
+
+    &--primary {
+        color: $color-primary;
+    }
+
+    &--tertiary {
+        color: $color-tertiary;
+    }
+
+    &--white {
+        color: #fff;
+    }
 }
