--- a/src/sass/components/_yt-item.scss
+++ b/src/sass/components/_yt-item.scss
@@ -30,7 +30,9 @@
     &:nth-of-type(even) &__container {grid-column: 1 / 2;}
 
 
-    .yt-item__video {
+    // needs to be deleted
+    // replaced bt yt-video
+    &__video {
         width: 100%;
         height: 0;
         padding-bottom: 56.25%;
