--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -33,6 +33,10 @@
 
     &:not(:last-of-type) {
         margin-bottom: 5rem;
+
+        @include respond(br5){
+            margin-bottom: 3rem;
+        }
     }
 
     @include respond(br4) {
@@ -40,7 +44,6 @@
     }
 
     @include respond(br5){
-        column-gap: 0;
         row-gap: 3rem;
     }
 
@@ -81,4 +84,69 @@
             grid-column: span 12;
         }
     }
+
+    /*
+    ** BORDERS
+    */
+
+    &--borders {
+        grid-gap: 0;
+        row-gap: 0;
+
+        & > * {
+            padding: 2.5rem;
+            border-right: .2rem solid $color-grey-light-2;
+            border-bottom: .2rem solid $color-grey-light-2;
+            position: relative;
+
+            @include respond(br4) {
+                border: none;
+            }
+
+            &:hover {
+                border-color: transparent;
+
+                &::after {
+                    outline-width: 1rem;
+                }
+            }
+
+            &::after {
+                content: "";
+                z-index: 100;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                outline-width: 0rem;
+                outline-style: solid;
+                outline-color: $color-secondary;
+                transition: all .2s;
+            }
+        }
+
+        // Make sure no dafault colors are set
+        &__text p.paragraph{
+            color: inherit;
+        }
+
+        &__text {
+            color: $color-grey;
+            transition: all .2s;
+
+            &:hover {
+                color: $color-grey-dark;//#fff;
+            }
+        }
+
+        &--3 > *:nth-child(3n) {
+            border-right: none;
+        }
+
+        &--3 > *:nth-last-child(-n + 3) {
+            border-bottom: none;
+        }
+    }
+
 }
