Created partners section

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -55,6 +55,22 @@ img.responsive {
     &--grey-light {background-color: $color-grey-light-1;}
 }
 
+.skew-down {
+    transform: skewY(6deg);
+
+    & > * {
+        transform: skewY(-6deg);
+    }
+}
+
+.skew-up {
+    transform: skewY(-6deg);
+
+    & > * {
+        transform: skewY(6deg);
+    }
+}
+
 // Are these even used?
 .u-flex {
     display: flex;
