--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -116,6 +116,10 @@
         color: $color-primary;
     }
 
+    &--secondary {
+        color: $color-secondary;
+    }
+
     &--tertiary {
         color: $color-tertiary;
     }
