--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -26,13 +26,6 @@
 }
 
 .features {
-    // background-image: linear-gradient(
-    //     rgba(#fff, 0.5), 
-    //     rgba(#fff, 0.5)),
-    //     url('../img/random.png');
-    // background-size: 40%;
-    // background-repeat: repeat;
-
     & .heading-secondary {
         margin-bottom: 2rem;
     }
@@ -53,6 +46,53 @@
         display: block;
         text-align: center;
         max-width: 70rem;
-        font-size: 2.5rem;
+    }
+}
+
+.team-section {
+
+    &__text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__img {
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(
+                to right bottom,
+                rgba($color-primary, 0.5),
+                rgba($color-tertiary, 0.5)
+            );
+            opacity: 1;
+            transition: all .2s;
+        }
+        &:hover::after {
+            opacity: 0;
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 1rem;
+            left: 1rem;
+            width: 100%;
+            height: 100%;
+            background-color: rgba($color-primary, 0.9);
+            z-index: -1;
+        }
+
+        & img {
+            display: block;
+        }
     }
 }
