--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -8,7 +8,7 @@
         text-transform: uppercase;
         text-decoration: none;
         padding: .5rem 1rem;
-        border-radius: .4rem;
+        border-radius: .3rem;
     }
 
     display: flex;
@@ -54,4 +54,88 @@
     &:hover &__text {
         background-position-y: 100%;
     }
+}
+
+.btn {
+
+    &--filled {
+        &,
+        &:visited,
+        &:active,
+        &:focus {
+            display: inline-block;
+            padding: 1rem 2rem;
+            border-radius: .3rem;
+            transition: all .2s ease-in-out;
+            text-decoration: none;
+            letter-spacing: .15rem;
+            font-size: 1.8rem;
+            font-weight: 400;
+        }
+        
+        &--tertiary {
+            color: #fff;
+            background-color: $color-tertiary;
+        }
+
+        &--primary {
+            color: #fff;
+            background-color: $color-primary;
+        }
+    }
+
+    &--outline {
+        &,
+        &:visited,
+        &:active,
+        &:focus {
+            display: inline-block;
+            padding: .8rem 2rem;
+            border-radius: .3rem;
+            transition: all .2s ease-in-out;
+            text-decoration: none;
+            letter-spacing: .15rem;
+            font-size: 1.8rem;
+            font-weight: 400;
+            border-width: .2rem;
+            border-style: solid;
+            background-size: 200% 100%;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+        }
+
+        &--tertiary {
+            color: $color-tertiary;
+            border-color: $color-tertiary;
+            background-image: linear-gradient(to right,
+                transparent, transparent 50%, 
+                $color-tertiary 50%, $color-tertiary);
+            &:hover {
+                color: #fff;
+            }
+        }
+
+        &--primary {
+            color: $color-primary;
+            border-color: $color-primary;
+            background-image: linear-gradient(to right,
+                transparent, transparent 50%, 
+                $color-primary 50%, $color-primary);
+            &:hover {
+                color: #fff;
+            }
+        }
+
+        &:hover {
+            background-position-x: 100%;
+        }
+    }
+
+    &--outline,
+    &--filled { &:hover {
+        transform: translateY(-0.2rem);
+        -webkit-box-shadow: 0px .5rem 1rem 0px rgba(0,0,0,0.2);
+        -moz-box-shadow: 0px .5rem 1rem 0px rgba(0,0,0,0.2);
+        box-shadow: 0px .5rem 1rem 0px rgba(0,0,0,0.2);
+    }}
 }
