--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -65,6 +65,7 @@
     letter-spacing: .2rem;
     line-height: 1.2;
     padding-bottom: 2rem;
+    transition: all .2s ease-in-out;
 
     @include respond(br2) {
         letter-spacing: .1rem;
@@ -79,6 +80,10 @@
 
     @include respond(br5) {
         font-size: 2rem;
+    }
+
+    &:hover {
+        transform: translateX(-0.5rem) skewX(-30deg);
     }
 }
 
