--- a/src/sass/components/_search.scss
+++ b/src/sass/components/_search.scss
@@ -19,9 +19,19 @@
 
     &__before {
         order: 1;
+        user-select: none;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -o-user-select: none;
     }
     &__after {
         order: 3;
+        user-select: none;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -o-user-select: none;
     }
 
     &__input {
