--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -33,9 +33,42 @@
         grid-template-columns: 100%;
         grid-template-rows: 100%;
         align-items: stretch;
+        position: relative;
+
+        
 
         @include respond(br4) {
+            // for next dev: couldnt find a good design for this
+            // maybe you can change this? other ideas were numbers on the left: 1. blah blah
+            // no time
             border: none;
+            // transform: skewX(5deg);
+
+            // & > * {
+            //     transform: skewX(-5deg);
+            // }
+
+            // &:nth-child(even) {
+            //     transform: skewX(-5deg);
+            //     & > * {
+            //         transform: skewX(5deg);
+            //     }
+            // }
+            
+
+            &:not(:last-child) {
+                margin-bottom: 2rem;
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    top: calc(100% + 1.1rem);
+                    left: 40%;
+                    width: 20%;
+                    height: 1px;
+                    background-color: $color-secondary;
+                }
+            }
         }
 
         &::before {
