--- a/src/sass/components/_list.scss
+++ b/src/sass/components/_list.scss
@@ -10,19 +10,19 @@
     }
 
     &__title {
-        margin-left: 3rem;
+        margin-left: 2rem;
         position: relative;
 
         &::before {
             content: "";
             position: absolute;
             top: 50%;
-            left: -3rem;
-            width: 1rem;
-            height: 1rem;
+            left: -2rem;
+            width: .5rem;
+            height: .5rem;
             transform: translateY(-50%);
             border-radius: 50%;
-            border: .5rem solid $color-primary;
+            border: .25rem solid $color-primary;
         }
         &:not(:last-child) {
             margin-bottom: 1rem;
