--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,11 +19,13 @@
 @import 'components/cookie';
 @import 'components/list';
 @import 'components/btn';
+@import 'components/switch';
 
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/header-blog';
+@import 'layout/layout-blog';
 
 @import 'pages/home';
 @import 'pages/cookie-policy';
