--- a/src/sass/layout/_layout-blog.scss
+++ b/src/sass/layout/_layout-blog.scss
@@ -1,28 +1,30 @@
 .layout-blog {
+    padding: 5rem 0;
     
     &__container {
         display: grid;
         grid-template-columns: 8fr 4fr;
+        grid-template-rows: max-content auto;
         column-gap: 5rem;
-    }
-
-    &__area {
-
-        &--posts {
-            grid-column: 1 / 2;
-        }
-
-        &--visited {
-            grid-column: 2 / 3;
-        }
+        row-gap: 5rem;
     }
 
     &__tab {
         background-color: $color-grey-light-1;
-        padding: 1rem;
+        padding: 1rem 2rem;
         display: flex;
         flex-direction: row;
         align-items: center;
+
+        &--posts {
+            grid-column: 1 / 2;
+            grid-row: 1 / 2;
+        }
+
+        &--visited {
+            grid-column: 2 / 3;
+            grid-row: 1 / 2;
+        }
     }
 
     &__heading {
@@ -31,5 +33,20 @@
         font-weight: 300;
         font-size: 2rem;
         color: $color-grey;
+    }
+
+    &__posts {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+
+        display: grid;
+        grid-template-columns: 6fr 6fr;
+        justify-items: center;
+        column-gap: 5rem;
+    }
+
+    &__visited {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
     }
 }
