--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,7 @@
 @import 'components/list';
 @import 'components/btn';
 @import 'components/switch';
+@import 'components/post-item';
 
 @import 'layout/grid';
 @import 'layout/header';
