Created visited post design

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,6 +21,7 @@
 @import 'components/btn';
 @import 'components/switch';
 @import 'components/post-item';
+@import 'components/visited-item';
 
 @import 'layout/grid';
 @import 'layout/header';
