--- a/src/sass/layout/_layout-blog.scss
+++ b/src/sass/layout/_layout-blog.scss
@@ -1,6 +1,6 @@
 .layout-blog {
     padding: 5rem 0;
-    
+
     &__container {
         display: grid;
         grid-template-columns: 8fr 4fr;
@@ -48,5 +48,12 @@
     &__visited {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
+        
+        display: flex;
+        flex-direction: column;
+
+        & > *:not(:last-child) {
+            margin-bottom: 3rem;
+        }
     }
 }
