--- a/src/sass/components/_visited-item.scss
+++ b/src/sass/components/_visited-item.scss
@@ -11,15 +11,15 @@
         
         & img {
             display: block;
-            // height: auto;
-            // width: 100%;
-            // position: absolute;
-            // top: 50%;
-            // left: 50%;
-            // transform: translate(-50%, -50%);
             height: 100%;
-            object-fit: cover;
-            object-position: center;
+            width: auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            // height: 100%;
+            // object-fit: cover;
+            // object-position: center;
         }
     }
 
