--- a/src/sass/layout/_layout-blog.scss
+++ b/src/sass/layout/_layout-blog.scss
@@ -7,6 +7,14 @@
         grid-template-rows: max-content auto;
         column-gap: 5rem;
         row-gap: 5rem;
+
+        @include respond(blog1) {
+            grid-template-columns: 7fr 5fr;
+        }
+
+        @include respond(blog2) {
+            grid-template-columns: 100%;
+        }
     }
 
     &__tab {
@@ -24,6 +32,11 @@
         &--visited {
             grid-column: 2 / 3;
             grid-row: 1 / 2;
+
+            @include respond(blog2) {
+                grid-column: 1 / 2;
+                grid-row: 3 / 4;
+            }
         }
     }
 
@@ -39,15 +52,30 @@
         grid-column: 1 / 2;
         grid-row: 2 / 3;
 
+        @include respond(blog2) {
+            grid-row: 2 / 3;
+        }
+
         display: grid;
         grid-template-columns: 6fr 6fr;
-        justify-items: center;
         column-gap: 5rem;
+
+        @include respond(blog1) {
+            grid-template-columns: 100%;
+            grid-template-rows: auto;
+            column-gap: 0;
+            row-gap: 5rem;
+        }
     }
 
     &__visited {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
+
+        @include respond(blog2) {
+            grid-column: 1 / 2;
+            grid-row: 4 / 5;
+        }
         
         display: flex;
         flex-direction: column;
