--- a/src/sass/layout/_layout-blog.scss
+++ b/src/sass/layout/_layout-blog.scss
@@ -66,6 +66,10 @@
             column-gap: 0;
             row-gap: 5rem;
         }
+
+        & > * {
+            order: 9999;
+        }
     }
 
     &__visited {
@@ -82,6 +86,10 @@
 
         & > *:not(:last-child) {
             margin-bottom: 3rem;
+        }
+
+        & > * {
+            order: 9999;
         }
     }
 }
